src/principal/CommandLineParser.java
// $ANTLR 3.4 /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g 2012-12-04 17:49:45

	package principal;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class CommandLineParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AF", "AG", "AND", "ATOM", "AU", "AX", "CHAR", "DEAD", "EF", "EG", "ENABLE", "EQUIV", "ESC_SEQ", "EU", "EX", "EXPONENT", "FALSE", "HEX_DIGIT", "IMPLY", "INITIAL", "LETTER", "NEG", "NUMBER", "OCTAL_ESC", "OR", "STRING", "STRING_FILE_DOT", "STRING_FILE_NET", "TRUE", "UNICODE_ESC", "WS", "'!'", "'('", "')'", "'-'", "'.'", "'../'", "'./'", "'/'", "'A'", "'AF'", "'AG'", "'AX'", "'E'", "'EF'", "'EG'", "'EX'", "'Justifie'", "'Justifietodot'", "'U'", "'_'", "'ctl'", "'ctltodot'", "'dead'", "'dot'", "'enable'", "'false'", "'graphe'", "'initial'", "'load'", "'look'", "'net'", "'succ'", "'todot'", "'true'"
    };

    public static final int EOF=-1;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int AF=4;
    public static final int AG=5;
    public static final int AND=6;
    public static final int ATOM=7;
    public static final int AU=8;
    public static final int AX=9;
    public static final int CHAR=10;
    public static final int DEAD=11;
    public static final int EF=12;
    public static final int EG=13;
    public static final int ENABLE=14;
    public static final int EQUIV=15;
    public static final int ESC_SEQ=16;
    public static final int EU=17;
    public static final int EX=18;
    public static final int EXPONENT=19;
    public static final int FALSE=20;
    public static final int HEX_DIGIT=21;
    public static final int IMPLY=22;
    public static final int INITIAL=23;
    public static final int LETTER=24;
    public static final int NEG=25;
    public static final int NUMBER=26;
    public static final int OCTAL_ESC=27;
    public static final int OR=28;
    public static final int STRING=29;
    public static final int STRING_FILE_DOT=30;
    public static final int STRING_FILE_NET=31;
    public static final int TRUE=32;
    public static final int UNICODE_ESC=33;
    public static final int WS=34;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CommandLineParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CommandLineParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return CommandLineParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g"; }


    	private ICallback callback;
    	private boolean programDeclDone;
    	private boolean usesDeclAllowed;
    	
    	public CommandLineParser(final ICallback callback) {
    		super(null);
    		this.callback = callback;
    		programDeclDone = false;
    		usesDeclAllowed = true;
    	}
    	
    	private void onLoad(final String filename) {
    		callback.load(filename);
    	}
    	
    	private void onGraphe() {
    		callback.graphe();
    	}
    	
    	private void onLook(final int etat) {
    		callback.look(etat);
    	}
    	
    	private void onSucc(final int etat) {
    		callback.succ(etat);
    	}
    	
    	private void onToDot(final String filename) {
    		callback.toDot(filename);
    	}
    	
    	private void onCtl(final Tree formule) {
    		callback.ctl(formule);
    	}
    	
    	private void onCtl(final Tree formule, final int etat) {
    		callback.ctl(formule, etat);
    	}
    	
    	private void onCtlToDot(final Tree formule, final String filename) {
    		callback.ctlToDot(formule, filename);
    	}
    	
    	private void onJustifie(final Tree formule, final int etat) {
    		callback.justifie(formule, etat);
    	}
    	
    	private void onJustifieToDot(final Tree formule, final int etat, final String filename) {
    		callback.justifieToDot(formule, etat, filename);
    	}

    	public void process(String source) throws Exception {
    		ANTLRStringStream in = new ANTLRStringStream(source);
    		CommandLineLexer lexer = new CommandLineLexer(in);
     		CommonTokenStream tokens = new CommonTokenStream(lexer);
     		super.setTokenStream(tokens);
     		this.start();
    	} 
    	
    	private Tree formule(final Object f) {
    		return (Tree) f;
    	}
    	
    	private int etat(final String e) {
    		return Integer.parseInt(e);
    	}
    		
    	public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
    		String hdr = getErrorHeader(e);
    		String msg = getErrorMessage(e, tokenNames);
    		System.out.println(hdr + " " + msg);
    	}


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:108:1: start : instruction ;
    public final CommandLineParser.start_return start() throws RecognitionException {
        CommandLineParser.start_return retval = new CommandLineParser.start_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        CommandLineParser.instruction_return instruction1 =null;



        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:109:2: ( instruction )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:109:4: instruction
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_instruction_in_start111);
            instruction1=instruction();

            state._fsp--;

            adaptor.addChild(root_0, instruction1.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "start"


    public static class instruction_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "instruction"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:112:1: instruction : ( load | graphe | look | succ | todot | ctl | ctltodot | justifie | justifietodot );
    public final CommandLineParser.instruction_return instruction() throws RecognitionException {
        CommandLineParser.instruction_return retval = new CommandLineParser.instruction_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        CommandLineParser.load_return load2 =null;

        CommandLineParser.graphe_return graphe3 =null;

        CommandLineParser.look_return look4 =null;

        CommandLineParser.succ_return succ5 =null;

        CommandLineParser.todot_return todot6 =null;

        CommandLineParser.ctl_return ctl7 =null;

        CommandLineParser.ctltodot_return ctltodot8 =null;

        CommandLineParser.justifie_return justifie9 =null;

        CommandLineParser.justifietodot_return justifietodot10 =null;



        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:113:2: ( load | graphe | look | succ | todot | ctl | ctltodot | justifie | justifietodot )
            int alt1=9;
            switch ( input.LA(1) ) {
            case 63:
                {
                alt1=1;
                }
                break;
            case 61:
                {
                alt1=2;
                }
                break;
            case 64:
                {
                alt1=3;
                }
                break;
            case 66:
                {
                alt1=4;
                }
                break;
            case 67:
                {
                alt1=5;
                }
                break;
            case 55:
                {
                alt1=6;
                }
                break;
            case 56:
                {
                alt1=7;
                }
                break;
            case 51:
                {
                alt1=8;
                }
                break;
            case 52:
                {
                alt1=9;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:113:4: load
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_load_in_instruction122);
                    load2=load();

                    state._fsp--;

                    adaptor.addChild(root_0, load2.getTree());

                    }
                    break;
                case 2 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:114:4: graphe
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_graphe_in_instruction127);
                    graphe3=graphe();

                    state._fsp--;

                    adaptor.addChild(root_0, graphe3.getTree());

                    }
                    break;
                case 3 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:115:4: look
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_look_in_instruction132);
                    look4=look();

                    state._fsp--;

                    adaptor.addChild(root_0, look4.getTree());

                    }
                    break;
                case 4 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:116:4: succ
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_succ_in_instruction137);
                    succ5=succ();

                    state._fsp--;

                    adaptor.addChild(root_0, succ5.getTree());

                    }
                    break;
                case 5 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:117:4: todot
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_todot_in_instruction142);
                    todot6=todot();

                    state._fsp--;

                    adaptor.addChild(root_0, todot6.getTree());

                    }
                    break;
                case 6 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:118:4: ctl
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ctl_in_instruction147);
                    ctl7=ctl();

                    state._fsp--;

                    adaptor.addChild(root_0, ctl7.getTree());

                    }
                    break;
                case 7 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:119:4: ctltodot
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ctltodot_in_instruction152);
                    ctltodot8=ctltodot();

                    state._fsp--;

                    adaptor.addChild(root_0, ctltodot8.getTree());

                    }
                    break;
                case 8 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:120:4: justifie
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_justifie_in_instruction157);
                    justifie9=justifie();

                    state._fsp--;

                    adaptor.addChild(root_0, justifie9.getTree());

                    }
                    break;
                case 9 :
                    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:121:4: justifietodot
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_justifietodot_in_instruction162);
                    justifietodot10=justifietodot();

                    state._fsp--;

                    adaptor.addChild(root_0, justifietodot10.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "instruction"


    public static class load_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "load"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:124:1: load : 'load' p1= file_net ;
    public final CommandLineParser.load_return load() throws RecognitionException {
        CommandLineParser.load_return retval = new CommandLineParser.load_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal11=null;
        CommandLineParser.file_net_return p1 =null;


        Object string_literal11_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:125:2: ( 'load' p1= file_net )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:125:4: 'load' p1= file_net
            {
            root_0 = (Object)adaptor.nil();


            string_literal11=(Token)match(input,63,FOLLOW_63_in_load173); 
            string_literal11_tree = 
            (Object)adaptor.create(string_literal11)
            ;
            adaptor.addChild(root_0, string_literal11_tree);


            pushFollow(FOLLOW_file_net_in_load177);
            p1=file_net();

            state._fsp--;

            adaptor.addChild(root_0, p1.getTree());

             onLoad((p1!=null?input.toString(p1.start,p1.stop):null)); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "load"


    public static class graphe_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "graphe"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:128:1: graphe : 'graphe' ;
    public final CommandLineParser.graphe_return graphe() throws RecognitionException {
        CommandLineParser.graphe_return retval = new CommandLineParser.graphe_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal12=null;

        Object string_literal12_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:129:2: ( 'graphe' )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:129:4: 'graphe'
            {
            root_0 = (Object)adaptor.nil();


            string_literal12=(Token)match(input,61,FOLLOW_61_in_graphe191); 
            string_literal12_tree = 
            (Object)adaptor.create(string_literal12)
            ;
            adaptor.addChild(root_0, string_literal12_tree);


             onGraphe(); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "graphe"


    public static class look_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "look"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:132:1: look : 'look' p1= etat ;
    public final CommandLineParser.look_return look() throws RecognitionException {
        CommandLineParser.look_return retval = new CommandLineParser.look_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal13=null;
        CommandLineParser.etat_return p1 =null;


        Object string_literal13_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:133:2: ( 'look' p1= etat )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:133:4: 'look' p1= etat
            {
            root_0 = (Object)adaptor.nil();


            string_literal13=(Token)match(input,64,FOLLOW_64_in_look205); 
            string_literal13_tree = 
            (Object)adaptor.create(string_literal13)
            ;
            adaptor.addChild(root_0, string_literal13_tree);


            pushFollow(FOLLOW_etat_in_look209);
            p1=etat();

            state._fsp--;

            adaptor.addChild(root_0, p1.getTree());

            onLook(etat((p1!=null?input.toString(p1.start,p1.stop):null))); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "look"


    public static class succ_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "succ"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:136:1: succ : 'succ' p1= etat ;
    public final CommandLineParser.succ_return succ() throws RecognitionException {
        CommandLineParser.succ_return retval = new CommandLineParser.succ_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal14=null;
        CommandLineParser.etat_return p1 =null;


        Object string_literal14_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:137:2: ( 'succ' p1= etat )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:137:4: 'succ' p1= etat
            {
            root_0 = (Object)adaptor.nil();


            string_literal14=(Token)match(input,66,FOLLOW_66_in_succ223); 
            string_literal14_tree = 
            (Object)adaptor.create(string_literal14)
            ;
            adaptor.addChild(root_0, string_literal14_tree);


            pushFollow(FOLLOW_etat_in_succ227);
            p1=etat();

            state._fsp--;

            adaptor.addChild(root_0, p1.getTree());

             onSucc(etat((p1!=null?input.toString(p1.start,p1.stop):null))); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "succ"


    public static class todot_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "todot"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:140:1: todot : 'todot' p1= file_dot ;
    public final CommandLineParser.todot_return todot() throws RecognitionException {
        CommandLineParser.todot_return retval = new CommandLineParser.todot_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal15=null;
        CommandLineParser.file_dot_return p1 =null;


        Object string_literal15_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:141:2: ( 'todot' p1= file_dot )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:141:4: 'todot' p1= file_dot
            {
            root_0 = (Object)adaptor.nil();


            string_literal15=(Token)match(input,67,FOLLOW_67_in_todot241); 
            string_literal15_tree = 
            (Object)adaptor.create(string_literal15)
            ;
            adaptor.addChild(root_0, string_literal15_tree);


            pushFollow(FOLLOW_file_dot_in_todot245);
            p1=file_dot();

            state._fsp--;

            adaptor.addChild(root_0, p1.getTree());

             onToDot((p1!=null?input.toString(p1.start,p1.stop):null)); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "todot"


    public static class ctl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ctl"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:144:1: ctl : 'ctl' p1= formule p2= etat ;
    public final CommandLineParser.ctl_return ctl() throws RecognitionException {
        CommandLineParser.ctl_return retval = new CommandLineParser.ctl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal16=null;
        CommandLineParser.formule_return p1 =null;

        CommandLineParser.etat_return p2 =null;


        Object string_literal16_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:145:2: ( 'ctl' p1= formule p2= etat )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:145:4: 'ctl' p1= formule p2= etat
            {
            root_0 = (Object)adaptor.nil();


            string_literal16=(Token)match(input,55,FOLLOW_55_in_ctl259); 
            string_literal16_tree = 
            (Object)adaptor.create(string_literal16)
            ;
            adaptor.addChild(root_0, string_literal16_tree);


            pushFollow(FOLLOW_formule_in_ctl263);
            p1=formule();

            state._fsp--;

            adaptor.addChild(root_0, p1.getTree());

            pushFollow(FOLLOW_etat_in_ctl267);
            p2=etat();

            state._fsp--;

            adaptor.addChild(root_0, p2.getTree());

             onCtl(formule((p1!=null?((Object)p1.tree):null)), etat((p2!=null?input.toString(p2.start,p2.stop):null))); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "ctl"


    public static class ctltodot_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ctltodot"
    // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:148:1: ctltodot : 'ctltodot' p1= formule p2= file_dot ;
    public final CommandLineParser.ctltodot_return ctltodot() throws RecognitionException {
        CommandLineParser.ctltodot_return retval = new CommandLineParser.ctltodot_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal17=null;
        CommandLineParser.formule_return p1 =null;

        CommandLineParser.file_dot_return p2 =null;


        Object string_literal17_tree=null;

        try {
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:149:2: ( 'ctltodot' p1= formule p2= file_dot )
            // /Users/jeremymorosi/Documents/Programmation/Modelisation et verif/modelproj/src/principal/CommandLine.g:149:4: 'ctltodot' p1= formule p2= file_dot
            {
            root_0 = (Object)adaptor.nil();


            string_literal17=(Token)match(input,56,FOLLOW_56_in_ctltodot281); 
            string_literal17_tree = 
            (Object)adaptor.create(string_literal17)
            ;
            adaptor.addChild(root_0, string_literal17_tree);


            pushFollow(FOLLOW_formule_in_ctltodot285);
            p1=formule();

            state._fsp--;

            adaptor.addChild(root_0, p1.getTree());

            pushFollow(FOLLOW_file_dot_in_ctltodot289);
            p2=file_dot();

            state._fsp--;

            adaptor.addChild(root_0, p2.getTree());

             onCtlToDot(formule((p1!=null?((Object)p1.tree):null)), (p2!=null?input.toString(p2.start,p2.stop):null)); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "ctltodot"


    public static class justifie_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

